05-15-2010 *1.0.6*
------------------

* Fixed some bugs.
* Session logic object receives the FSM.Session as constructor parameter.
* FSMSession object's processMessage function throws an exception if no suitable transition for the current state is
  found. It will silently fail if dispatch method is called.

05-07-2012 *1.0.5*
------------------

* added convention state enter/exit, transition action/preGuard/postGuard as follows:

  state/fsm enter action:   state.name+"_enter"
  state/fsm exit action:    state.name+"_exit"

  transition action:        transition.event+"_transition"
  transition preGuard:      transition.event+"_preGuard"
  transition postGuard:     transition.event+"_postGuard"

* Top level FSM now have correct name. The one they're registered with.
* Fixed a bug that didn't passed properly the state on FSM enter to callbacks.

04-15-2012 *1.0.4*
------------------

* published module 1.0.4
* added onEnter/onExit on subState.