@@ -1,6 +1,6 @@
 {
   "name": "automata",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "main": "automata",
   "keywords": [
     "DFA",
